--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^5.3.0-alpha3",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
